# tanngo_app

./: .gitignore  README.md  app.py  create_admin.py  generate_vectors.py  m.py  manage.py  pyproject.toml  requirements.txt  words.xlsx  words_metadata.pkl  wrong_words.csv
migrations/versions/: 27b74d63a31c_add_flask_login_and_initial_tables.py  33bb7509034b_add_quizattempt_model.py  463907bada1b_initial.py  e96d01ab90b2_initial_setup.py  f6fedad99d2e_add_is_admin_to_user_model.py
static/: word_vectors.pkl
templates/: admin.html  all_manage_mistakes.html  base.html  contact.html  current_result.html  deleted_messages.html  index.html  learn_details.html  login.html  manage_mistakes.html  manage_rough_mistakes.html  menu.html  mistake.html  mypage.html  no_mistakes.html  prepare_rough_review.html  progress.html  quiz.html  result.html  rough_current_result.html  rough_menu.html  rough_quiz.html  rough_range_selector.html  rough_result.html  search.html  signup.html
